<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kxwl.kxpro.MainActivity"
    android:background="@color/bright_foreground_disabled_material_light">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:showDividers="middle"
        android:divider="@drawable/divider"
        android:background="@color/colorWhite">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/item_padding"
        android:paddingBottom="@dimen/item_padding"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/font_normal"
            android:text="@string/goods_name_tag" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="@dimen/font_normal"
            android:hint="@string/goods_name_tag_hint"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/item_padding"
        android:paddingBottom="@dimen/item_padding"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/font_normal"
            android:text="@string/goods_barcode_tag" />
        <EditText
            android:id="@+id/et_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_normal"
            android:hint="@string/goods_barcode_tag"
            android:background="@null"
            android:text="6949833111184" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/item_padding"
        android:paddingBottom="@dimen/item_padding"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/font_normal"
            android:text="@string/goods_kind_tag" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_normal"
            android:hint="@string/goods_kind_tag"
            android:background="@null" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/item_padding"
            android:paddingBottom="@dimen/item_padding"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/font_normal"
                android:text="@string/goods_specification_tag" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_normal"
                android:hint="@string/goods_specification_tag"
                android:background="@null" />

        </LinearLayout>
        <Button
            android:id="@+id/loadBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="获取商品信息"
            />
    </LinearLayout>


</LinearLayout>
